
 * Added support for setting/overriding the response character set in Connection.Response, for cases where the charset
   is not defined by the server, or is defined incorrectly.
   <https://github.com/jhy/jsoup/issues/743>

 * Improved performance of class selectors by reducing memory allocation and garbase collection.
   <https://github.com/jhy/jsoup/pull/753>

 * Fixed an issue when converting to the W3CDom XML, where valid (but ugly) HTML attribute names containing characters
   like '"' could not be converted into valid XML attribute names. These attribute names are now normalized if possible,
   or not added to the XML DOM.
   <https://github.com/jhy/jsoup/issues/721>

 * Fixed an OOB exception when loading an empty-body URL and parsing with the XML parser.
   <https://github.com/jhy/jsoup/issues/727>

 * Fixed an issue where attribute names starting with a slash would be parsed incorrectly.
   <https://github.com/jhy/jsoup/pull/748>

 * Don't reuse charset encoders from OutputSettings, to make threadsafe.
   <https://github.com/jhy/jsoup/issues/740>

 * Fixed an issue in connections with a requestBody where a custom content-type header could be ignored.
   <https://github.com/jhy/jsoup/issues/756>

*** Release 1.9.2 [2016-May-17]
 * Fixed an issue where tag names that contained non-ascii characters but started with an ascii character
   would cause the parser to get stuck in an infinite loop.
   <https://github.com/jhy/jsoup/issues/704>

 * In XML documents, detect the charset from the XML prolog - <?xml encoding="UTF-8"?>
   <https://github.com/jhy/jsoup/issues/701>

 * Fixed an issue where created XML documents would have an incorrect prolog.
   <https://github.com/jhy/jsoup/issues/652>

 * Fixed an issue where you could not use an attribute selector to find values containing unbalanced braces or
   parentheses.
   <https://github.com/jhy/jsoup/issues/611>
